fix: deleted debug spamming in chat